welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:1: error: Missing closing brace `}' assumed here
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
^